--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 			<h2>About</h2>
 			<p>John Smith is a software developer with over 10 years of experience in the field. He specializes in web development and has worked on various projects for clients in different industries.</p>
 		</section>
+		<embed src="testing.pdf" width="100%"/>
 
 		<section id="education">
 			<h2>Education</h2>
