--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 		<section id="about">
 			<h2>About</h2>
 			<p>John Smith is a software developer with over 10 years of experience in the field. He specializes in web development and has worked on various projects for clients in different industries.</p>
-			<embed src="testing.pdf" width="100%" height="100%"/>
+			<embed src="testing.pdf" width="100%" height="800px"/>
 		</section>
 		
 
