--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
 </head>
 <body>
 	<main>
-		<embed src="testing.pdf" type="application/pdf" width="100%" height="800" toolbar="0">
+		<embed src="testing.pdf" type="application/pdf" height="100%" toolbar="0">
 	</main>
