--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<main>
-		<embed src="testing.pdf" type="application/pdf" width="100%" height="800px" toolbar="0">
+		<embed src="testing.pdf" type="application/pdf" width="1000" height="1000" toolbar="0">
 	</main>
 </body>
 </html>
