--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Biography</title>
 </head>
-<body>
-		<embed src="testing.pdf" type="application/pdf" width="1000" height="1000" toolbar="0">
-</body>
+<body><div style="text-align: center;">
+		<embed src="testing.pdf" type="application/pdf" width="100%" height="100%" toolbar="0">
+</body></div>
 </html>
