--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<title>Biography</title>
-</head>
-<body><div style="text-align: center;">
-		<embed src="testing.pdf" type="application/pdf" width="100%" height="100%" toolbar="0">
-</body></div>
+	<head>
+		<title>Biography</title>
+	</head>
+	<body>
+		<div style="text-align: center;">
+			<embed src="testing.pdf" type="application/pdf" width="100%" height="100%" toolbar="0">
+		</div>
+	</body>
 </html>
