--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Biography</title>
-	</head>
-	<body>
-		<div style="text-align: center;">
-			dgadfgdg<embed src="testing.pdf" type="application/pdf" width="100%" height="100%" toolbar="0">
-		</div>
-	</body>
+<head>
+	<title>Biography</title>
+	<style>
+		.pdf-container {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 100vh;
+		}
+		.pdf-embed {
+			width: 100%;
+			height: 100%;
+		}
+	</style>
+</head>
+<body>
+	<div class="pdf-container">
+		<embed class="pdf-embed" src="testing.pdf" type="application/pdf">
+	</div>
+</body>
 </html>
