--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			height: 100vh;
+			height: 100%;
 		}
 		.pdf-embed {
 			width: 100%;
