--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 	<div class="pdf-container">
-		<embed class="pdf-embed" src="testing.pdf" type="application/pdf">
+		<embed class="pdf-embed" src="testing.pdf" type="application/pdf" zoom="fit">
 	</div>
 </body>
 </html>
