--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			height: 1000px;
+			height: 100%;
 		}
 		.pdf-embed {
 			width: 100%;
@@ -17,7 +17,7 @@
 </head>
 <body>
 	<div class="pdf-container">
-		<embed class="pdf-embed" src="testing.pdf" type="application/pdf" zoom="fit">
+		<embed class="pdf-embed" src="testing.pdf" type="application/pdf">
 	</div>
 </body>
 </html>
