--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 			justify-content: center;
 			align-items: center;
 			height: 100%;
+			overflow: hidden;
 		}
 		.pdf-embed {
 			width: 100%;
@@ -17,7 +18,7 @@
 </head>
 <body>
 	<div class="pdf-container">
-		<embed class="pdf-embed" src="testing.pdf" type="application/pdf">
+		<embed class="pdf-embed" src="testing.pdf" type="application/pdf" zoom="page" scroll="no">
 	</div>
 </body>
 </html>
