--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			height: 100%;
+			height: 90vh;
 			overflow: hidden;
 		}
 		.pdf-embed {
