--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			height: 20vh;
+			min-height: 1080px;
 			overflow: hidden;
 		}
 		.pdf-embed {
