--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<div class="pdf-container">
-		<embed class="pdf-embed" src="testing.pdf" type="application/pdf" zoom="page" scroll="no">
+		<embed class="pdf-embed" src="testing.pdf" type="application/pdf" zoom="page" scroll="no" width="fit">
 	</div>
 </body>
 </html>
