--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<style>
 		.pdf-container {
 			justify-content: center;
-			min-width: 1920px;
+			min-width: 1920;
 						}
 		.pdf-embed {
-			min-height: 1080px;
+			min-height: 1080;
 			}
 </style>
 </head>
