--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<title>Biography</title>
-	<style>
-		.pdf-container {
-			justify-content: center;
-			min-width: 1920;
-						}
-		.pdf-embed {
-			min-height: 1080;
-			}
-</style>
-</head>
-<body>
-	<div class="pdf-container">
-		<embed class="pdf-embed" src="testing.pdf" type="application/pdf" zoom="page" scroll="no" width="1920">
-	</div>
-</body>
+  <head>
+    <title>CV</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+      .pdf-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+      }
+      .pdf-embed {
+        width: 100%;
+        height: 100%;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="pdf-container">
+      <embed class="pdf-embed" src="testing.pdf" type="application/pdf" zoom="auto">
+    </div>
+  </body>
 </html>
