--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 100vh;
+        height: 70vh;
       }
       .pdf-embed {
         width: 100%;
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="pdf-container">
-      <embed class="pdf-embed" src="testing.pdf" type="application/pdf" zoom="auto">
+      <embed class="pdf-embed" src="testing.pdf" type="application/pdf" zoom="page-width">
     </div>
   </body>
 </html>
