--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 90vh;
-      }
+            }
       .pdf-embed {
         width: 100%;
         height: 100%;
@@ -21,7 +20,7 @@
   </head>
   <body>
     <div class="pdf-container">
-      <embed class="pdf-embed" src="testing.pdf" type="application/pdf" zoom="page">
+      <embed class="pdf-embed" src="testing.pdf" type="application/pdf" zoom="page-width">
     </div>
   </body>
 </html>
