--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div class="pdf-container">
-      <embed class="pdf-embed" src="testing.pdf" type="application/pdf" zoom="page-width">
+      <embed class="pdf-embed" src="testing.pdf" type="application/pdf" zoom="page-height">
     </div>
   </body>
 </html>
