--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
-            }
+        height: 70vh;
+   }
       .pdf-embed {
         width: 100%;
         height: 100%;
