--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         height: 100vh;
    }
       .pdf-embed {
-        width: 100%;
+        width: 1000px;
         height: 100%;
       }
     </style>
