--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         height: 100vh;
    }
       .pdf-embed {
-        width: 1000px;
+        width: 20%;
         height: 100%;
       }
     </style>
