--- a/index.html
+++ b/index.html
@@ -12,14 +12,11 @@
         align-items: center;
         height: 100vh;
    }
-      .pdf-embed {
-       height: 1000;
-      }
     </style>
   </head>
   <body>
     <div class="pdf-container">
-      <embed class="pdf-embed" src="testing.pdf" type="application/pdf" zoom="page-height">
+      <embed class="pdf-embed" src="testing.pdf" type="application/pdf" zoom="20%">
     </div>
   </body>
 </html>
