--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>CV</title>
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-      }
-      .pdf-container {
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-   }
-    </style>
-  </head>
-  <body>
-    <div class="pdf-container">
-      <embed class="pdf-embed" src="testing.pdf" type="application/pdf" zoom="100%">
-    </div>
-  </body>
+	<head>
+		<title>CV</title>
+		<style>
+			   body
+			   .pdf-container {
+			     justify-content: center;
+			     align-items: center;
+			     height: 100vh;
+			}
+			   .pdf-embed {
+			     width: 100%;
+			     height: 100%;
+			   }
+		</style>
+	</head>
+	<body>
+		<div class="pdf-container">
+			<embed class="pdf-embed" src="testing.pdf" type="application/pdf">
+		</div>
+	</body>
 </html>
