--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</head>
 	<body>
 		<div class="pdf-container">
-			<embed class="pdf-embed" src="CV_Timar.pdf" type="application/pdf">
+			<embed class="pdf-embed" src="CV.pdf" type="application/pdf">
 		</div>
 	</body>
 </html>
